more bootsnap garbage

--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -6,7 +6,7 @@ ruby "<%= RUBY_VERSION %>"
 gem "active_type", ">= 0.3.2"
 gem "autoprefixer-rails", ">= 5.0.0.1"
 gem "bcrypt"<%= gemfile_requirement("bcrypt") %>
-#gem "bootsnap"<%= gemfile_requirement("bootsnap") %>, require: false
+gem "bootsnap"<%= gemfile_requirement("bootsnap") %>, '~> 1.4.5'
 gem "coffee-rails"<%= gemfile_requirement("coffee-rails") %>
 gem "dotenv-rails", ">= 2.0.0"
 gem "marco-polo"
